--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,7 @@
        "      <th>urgent</th>\n",
        "      <th>hot</th>\n",
        "      <th>...</th>\n",
+       "      <th>dst_host_count</th>\n",
        "      <th>dst_host_srv_count</th>\n",
        "      <th>dst_host_same_srv_rate</th>\n",
        "      <th>dst_host_diff_srv_rate</th>\n",
@@ -53,7 +54,6 @@
        "      <th>dst_host_srv_serror_rate</th>\n",
        "      <th>dst_host_rerror_rate</th>\n",
        "      <th>dst_host_srv_rerror_rate</th>\n",
-       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,6 +70,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>25</td>\n",
        "      <td>0.17</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.17</td>\n",
@@ -79,7 +80,6 @@
        "      <td>0.05</td>\n",
        "      <td>0.00</td>\n",
        "      <td>normal</td>\n",
-       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -94,6 +94,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.60</td>\n",
        "      <td>0.88</td>\n",
@@ -103,7 +104,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>normal</td>\n",
-       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -118,6 +118,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>26</td>\n",
        "      <td>0.10</td>\n",
        "      <td>0.05</td>\n",
        "      <td>0.00</td>\n",
@@ -127,7 +128,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>neptune</td>\n",
-       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -142,6 +142,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>255</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.03</td>\n",
@@ -151,7 +152,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
        "      <td>normal</td>\n",
-       "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -166,6 +166,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>255</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -175,11 +176,10 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>normal</td>\n",
-       "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 42 columns</p>\n",
+       "<p>5 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -190,12 +190,12 @@
        "0      tcp          http      SF   232       8153          0     0   \n",
        "0      tcp          http      SF   199        420          0     0   \n",
        "\n",
-       "   wrong_fragment  urgent  hot  ...  dst_host_srv_count  \\\n",
-       "0               0       0    0  ...                0.17   \n",
-       "0               0       0    0  ...                0.00   \n",
-       "0               0       0    0  ...                0.10   \n",
-       "0               0       0    0  ...                1.00   \n",
-       "0               0       0    0  ...                1.00   \n",
+       "   wrong_fragment  urgent  hot  ...  dst_host_count  dst_host_srv_count  \\\n",
+       "0               0       0    0  ...              25                0.17   \n",
+       "0               0       0    0  ...               1                0.00   \n",
+       "0               0       0    0  ...              26                0.10   \n",
+       "0               0       0    0  ...             255                1.00   \n",
+       "0               0       0    0  ...             255                1.00   \n",
        "\n",
        "   dst_host_same_srv_rate  dst_host_diff_srv_rate  \\\n",
        "0                    0.03                    0.17   \n",
@@ -218,17 +218,17 @@
        "0                  0.01                      0.00                  0.01   \n",
        "0                  0.00                      0.00                  0.00   \n",
        "\n",
-       "   dst_host_srv_rerror_rate  label  \n",
-       "0                    normal     20  \n",
-       "0                    normal     15  \n",
-       "0                   neptune     19  \n",
-       "0                    normal     21  \n",
-       "0                    normal     21  \n",
+       "   dst_host_srv_rerror_rate  \n",
+       "0                    normal  \n",
+       "0                    normal  \n",
+       "0                   neptune  \n",
+       "0                    normal  \n",
+       "0                    normal  \n",
        "\n",
-       "[5 rows x 42 columns]"
+       "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,12 +250,17 @@
     "    \"diff_srv_rate\",\"srv_diff_host_rate\",\"dst_host_count\",\"dst_host_srv_count\",\n",
     "    \"dst_host_same_srv_rate\",\"dst_host_diff_srv_rate\",\"dst_host_same_src_port_rate\",\n",
     "    \"dst_host_srv_diff_host_rate\",\"dst_host_serror_rate\",\"dst_host_srv_serror_rate\",\n",
-    "    \"dst_host_rerror_rate\",\"dst_host_srv_rerror_rate\",\"label\"]\n",
+    "    \"dst_host_rerror_rate\",\"dst_host_srv_rerror_rate\", \"label\"]\n",
     "\n",
     "df = pd.read_csv('https://raw.githubusercontent.com/Bilou75019/KDD-project/master/KDD_files/KDDTrain%2B.csv', delimiter=',')\n",
     "df_test = pd.read_csv('https://raw.githubusercontent.com/Bilou75019/KDD-project/master/KDD_files/KDDTest%2B.csv', delimiter=',')\n",
     "\n",
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "for set_ in (df, df_test): \n",
+    "  set_.drop(\"label\", axis=1, inplace=True)\n",
+    "  \n",
+    "df.head()\n"
    ]
   },
   {
